--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "NAYAN-BOT",
+    "name": "ARYAN",
     "version": "5.2.1",
-    "description": "simple messenger bot",
+    "description": "ArYan simple messenger bot",
     "main": "",
     "scripts": {
         "start": "node --trace-warnings --use_strict --async-stack-traces Nayan/catalogs/Nayana.js",
